--- a/src/ui/layout/style.css
+++ b/src/ui/layout/style.css
@@ -3,3 +3,9 @@
     -fx-padding: 0px;
 }
 
+.list-view .scroll-bar:horizontal .increment-arrow,
+.list-view .scroll-bar:horizontal .decrement-arrow,
+.list-view .scroll-bar:horizontal .increment-button,
+.list-view .scroll-bar:horizontal .decrement-button {
+    -fx-padding:0;
+}
