--- a/src/ui/layout/gctab.fxml
+++ b/src/ui/layout/gctab.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Text?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.GCController">
     <children><Button fx:id="gcButton" layoutX="227.0" layoutY="431.0" mnemonicParsing="false" text="Start Garbage Collection" /><Pane fx:id="gcPane" layoutX="43.0" layoutY="14.0" prefHeight="400.0" prefWidth="515.0" style="-fx-border-color: black; -fx-background-color: skyblue;">
 <children>
